@@ -64,6 +64,7 @@ NEWS
   * fix auth.backend.ldap.bind-dn/pw problems (only read from global context for temporary ldap reconnects, thx ruskie)
   * fix memleak in request header parsing (#1774, thx qhy)
   * fix mod_rewrite memleak/endless loop detection (#1775, thx phy - again!)
+  * use decoded url for matching in mod_redirect (#1720)
 
 - 1.4.19 - 2008-03-10
 
